--- a/src/lib/components/Backup/styles/scss/index.scss
+++ b/src/lib/components/Backup/styles/scss/index.scss
@@ -1,3 +1,3 @@
 @import  "./conf.scss";
 // @import "./behaviurs/index.scss";
-@import "./elements/index.scss";
+// @import "./elements/index.scss";
